added counter, fixed bugs

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -143,7 +143,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -161,7 +180,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -169,7 +188,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -187,7 +225,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -195,7 +233,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -213,7 +270,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -221,7 +278,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -239,7 +315,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -247,7 +323,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -265,7 +360,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -273,7 +368,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -291,7 +405,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -299,7 +413,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
@@ -317,7 +450,7 @@
                     <div class="dreams-rank">
                         <span class="supported">
                             <span>51</span>
-                            Підтримало
+                            Підтримали
                         </span>
                         <span class="rating">
                             Рейтинг
@@ -325,7 +458,26 @@
                         </span>
                     </div>
                 </div>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+					<div id="finance" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="instruments" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+					<div id="people" data-pct="100">
+						<svg id="svg" width="60" height="60" viewPort="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+							<circle id="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+						</svg>
+					</div>
+				</div>
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
         </ul>
