--- a/index.html
+++ b/index.html
@@ -4,37 +4,22 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/routing.js"></script>
 
-    <script src="js/allDreams/controller.js"></script>
-    <script src="js/allDreams/model.js"></script>
-    <script src="js/allDreams/routing.js"></script>
+    <script src="js/addDream/controller.js"></script>
+    <script src="js/addDream/model.js"></script>
     <script src="js/contacts/controller.js"></script>
     <script src="js/contacts/model.js"></script>
-    <script src="js/contacts/routing.js"></script>
-    <script src="js/dream/controller.js"></script>
-    <script src="js/dream/model.js"></script>
-    <script src="js/dream/routing.js"></script>
-    <script src="js/error/controller.js"></script>
-    <script src="js/error/model.js"></script>
-    <script src="js/error/routing.js"></script>
+    <script src="js/editDream/controller.js"></script>
+    <script src="js/editDream/controller.js"></script>
+    <script src="js/editProfile/model.js"></script>
+    <script src="js/editProfile/model.js"></script>
     <script src="js/faq/controller.js"></script>
     <script src="js/faq/model.js"></script>
-    <script src="js/faq/routing.js"></script>
-    <script src="js/mainPage/controller.js"></script>
-    <script src="js/mainPage/model.js"></script>
-    <script src="js/mainPage/routing.js"></script>
-    <script src="js/oldBrowser/controller.js"></script>
-    <script src="js/oldBrowser/model.js"></script>
-    <script src="js/oldBrowser/routing.js"></script>
-    <script src="js/popUps/controller.js"></script>
-    <script src="js/popUps/model.js"></script>
-    <script src="js/popUps/routing.js"></script>
-    <script src="js/profile/controller.js"></script>
-    <script src="js/profile/model.js"></script>
-    <script src="js/profile/routing.js"></script>
-    <script src="js/search/controller.js"></script>
-    <script src="js/search/model.js"></script>
-    <script src="js/search/routing.js"></script>
+    <script src="js/home/controller.js"></script>
+    <script src="js/home/model.js"></script>
+    <script src="js/userProfile/controller.js"></script>
+    <script src="js/userProfile/model.js"></script>
 
     <link rel="stylesheet" href="styles/contacts.css">
     <link rel="stylesheet" href="styles/error-page.css">
@@ -46,6 +31,6 @@
     <link rel="stylesheet" href="styles/user-profile-edit.css">
 </head>
 <body>
-    <div ui-view="mainPage"></div>
+    <div ui-view="home"></div>
 </body>
 </html>
