--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
 
-    <script src="js/addDream/controller.js"></script>
     <script src="js/addDream/model.js"></script>
-    <script src="js/contacts/controller.js"></script>
+    <script src="js/addDream/controller.js"></script>
     <script src="js/contacts/model.js"></script>
-    <script src="js/editDream/controller.js"></script>
+    <script src="js/contacts/controller.js"></script>
+    <script src="js/editDream/model.js"></script>
     <script src="js/editDream/controller.js"></script>
     <script src="js/editProfile/model.js"></script>
-    <script src="js/editProfile/model.js"></script>
-    <script src="js/faq/controller.js"></script>
+    <script src="js/editProfile/controller.js"></script>
     <script src="js/faq/model.js"></script>
-    <script src="js/home/controller.js"></script>
+    <script src="js/faq/controller.js"></script>
     <script src="js/home/model.js"></script>
-    <script src="js/userProfile/controller.js"></script>
+    <script src="js/home/controller.js"></script>
     <script src="js/userProfile/model.js"></script>
+    <script src="js/userProfile/controller.js"></script>
 
     <link rel="stylesheet" href="styles/contacts.css">
     <link rel="stylesheet" href="styles/error-page.css">
