--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <link rel="stylesheet" href="styles/user-profile-edit.css">
 </head>
 <body>
-    <div ui-view="home"></div>
+    <ui-view></ui-view>
 </body>
 </html>
