Added content to template pages

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <link rel="stylesheet" href="styles/search.css">
     <link rel="stylesheet" href="styles/user-profile.css">
     <link rel="stylesheet" href="styles/user-profile-edit.css">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-    <ui-view></ui-view>
+    <div ui-view="home"></div>
 </body>
 </html>
