--- a/dream.html
+++ b/dream.html
@@ -66,7 +66,7 @@
         </ul>
         <a class="add-dream" href="#">Додати мрію</a>
     </header>
-	
+
     <div class="bg-pages dream-page">
         <a class="dream-logo" href="#">
             <img src="images/dream-logo.jpg" alt="Супермрія" width="649" height="357" />
@@ -91,7 +91,26 @@
                     <li><span class="circle work"></span><a href="#">Провести роботи</a></li>
                 </ul>
                 <p class="dream-support-text"> Підтримало<span class="dream-support-number">541</span></p>
-                <img src="images/counter.png" alt="">
+                <div class="work-progress">
+                  <div class="finance" data-pct="100">
+                    <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                      <circle class="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                    </svg>
+                  </div>
+                  <div class="instruments" data-pct="100">
+                    <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                      <circle class="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                    </svg>
+                  </div>
+                  <div class="people" data-pct="100">
+                    <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                      <circle class="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                    </svg>
+                  </div>
+              </div>
                 <h2>Кошторис проекту</h2>
                 <ul class="dream-estimate">
                     <li>
@@ -99,15 +118,15 @@
                            <ul class="item-list">
                             <li>
                                 <p class="dream-item">Вагон піску</p>
-                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>
                             </li>
                             <li>
                                 <p class="dream-item">Червона фарба і ще багато чого, дуже багато</p>
-                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>
                             </li>
                             <li>
                                 <p class="dream-item">Синя фарба</p>
-                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>
                             </li>
                         </ul>
                     </li>
@@ -116,15 +135,15 @@
                         <ul class="item-list">
                             <li>
                                 <p class="dream-item">Вагон піску</p>
-                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>
                             </li>
                             <li>
                                 <p class="dream-item">Червона фарба і ще багато чого, дуже багато</p>
-                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>
                             </li>
                             <li>
                                 <p class="dream-item">Синя фарба</p>
-                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/1000 грн.<span class="plus-add-help">+</span></p>
                             </li>
                         </ul>
                     </li>
@@ -133,15 +152,15 @@
                         <ul class="item-list">
                             <li>
                                 <p class="dream-item">Вагон піску</p>
-                                <p class="item-number"><span class="already-have">99 999 </span>/99 999 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">99 999 </span>/99 999 грн.<span class="plus-add-help">+</span></p>
                             </li>
                             <li>
                                 <p class="dream-item">Червона фарба і ще багато чого, дуже багато і ще багато чого, дуже багато</p>
-                                <p class="item-number"><span class="already-have">0</span>/1 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">0</span>/1 грн.<span class="plus-add-help">+</span></p>
                             </li>
                             <li>
                                 <p class="dream-item">Синя фарба</p>
-                                <p class="item-number"><span class="already-have">999</span>/99 999 грн.<span class="plus-add-help">+</span></p>     
+                                <p class="item-number"><span class="already-have">999</span>/99 999 грн.<span class="plus-add-help">+</span></p>
                             </li>
                         </ul>
                     </li>
@@ -152,7 +171,7 @@
                 </li><li><a href="#"><span class="ico-vk"></span></a>
                 </li><li><a href="#"><span class="ico-gplus"></span></a>
                 </li><li><a href="#"><span class="ico-tw"></span></a>
-            </li></ul>     
+            </li></ul>
             </aside>
             <section>
                <article>
@@ -162,17 +181,17 @@
                       <p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>
                        <p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>
                        <p>ЧФ ПрАТ КБ "ПРИВАТБАНК" Р/р 123456789</p>
-                        
+
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p>
                   <ul class="dream-docs">
                       <li class="dream-docx"><a href="#">Building.docx</a></li>
                        <li class="dream-xslx"><a href="#">Building.xslx</a></li>
                         <li class="dream-pdf"><a href="#">Building.pdf</a></li>
                   </ul>
-               </article>   
+               </article>
                <h2>Учасники</h2>
                <ul class="dream-participants">
                    <li>
@@ -225,14 +244,14 @@
                            <li>покрасить качели (1 день)</li>
                        </ul>
                    </li>
-               </ul> 
-               <h2>Коментарі</h2> 
+               </ul>
+               <h2>Коментарі</h2>
                <div class="dream-comments">
-    
-               </div>           
-            </section>    
+
+               </div>
+            </section>
   	</div>
-   
+
     <footer>
         <ul class="footer-info">
             <li>
