removed extra links

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/FAQ.css">
 </head>
-
 <body>
 <div class="wrapper">
     <header>
-        <h1><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
+        <h1><a class="logo" href="#"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
         <nav>
         <ul class="main-menu">
             <li><a href="FAQ.html">FAQ</a></li>
