removed extra links

--- a/old-browsers.html
+++ b/old-browsers.html
@@ -5,11 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Index</title>
     <link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/old-browsers.css">
 </head>
+
 <body>
 <div class="wrapper">
 	<header>
-		<p><a class="logo" href="#"><img src="images/logo.png" alt="Черкаська мрія">Черкаська</a></p>
+		<p><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська</a></p>
 	</header>
     <div class="bg-pages">
         <section class="old-brows">
