--- a/user-profile.html
+++ b/user-profile.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Index</title>
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/FAQ.css">
+	<link rel="stylesheet" href="styles/user-profile.css">
 </head>
 
 <body>
@@ -65,7 +67,7 @@
         </ul>
         <a class="add-dream" href="#">Додати мрію</a>
     </header>
-
+	
     <div class="bg-pages prof-con">
 	    <aside class="g-aside prof-aside">
             <div class="user-avatar">
@@ -200,7 +202,7 @@
             </ul>
 	    </section>
 	</div>
-
+   
     <footer>
         <ul class="footer-info">
             <li>
