--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Index</title>
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/FAQ.css">
+	<link rel="stylesheet" href="styles/search.css">
+	<link rel="stylesheet" href="styles/contacts.css">
 </head>
 
 <body>
@@ -65,7 +68,7 @@
         </ul>
         <a class="add-dream" href="#">Додати мрію</a>
     </header>
-
+	
     <div class="bg-pages">
         <section class="feedback">
             <h1 class="contacts-page-title">Зворотній зв’язок</h1>
@@ -96,10 +99,10 @@
                         <li class="enter-form"><input class="red-button" type="submit" value="Надіслати" /></li>
                     </ul>
                 </fieldset>
-            </form>
+            </form>            
         </section>
   	</div>
-
+   
     <footer>
         <ul class="footer-info">
             <li>
