--- a/new-dream(empty+full).html
+++ b/new-dream(empty+full).html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Add new dream</title>
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/new-dream(empty+full)+edit-page.css">
 </head>
 
 <body>
@@ -65,7 +66,7 @@
         </ul>
         <a class="add-dream" href="#">Додати мрію</a>
     </header>
-
+	
     <section class="bg-pages">
         <form method="post">
             <fieldset class="media">
@@ -77,7 +78,7 @@
                     </div>
                     <label for="main-image">Зображення<span>*</span></label>
                     <input id="main-image" type="file" name="main-image" />
-                </div>
+                </div> 
                 <ul class="uploaded-images">
                     <li><img src="images/add-img.jpg" alt="" /><span class="close"></span></li>
                     <li><img src="images/add-img.jpg" alt="" /><span class="close"></span></li>
@@ -96,25 +97,25 @@
                     <li class="pdf"><a href="#">Building.pdf</a><span class="close-doc"></span></li>
                 </ul>
                 <div class="add-url">
-                            <label for="video">Youtube Url</label>
+                            <label for="video">Youtube Url</label> 
                             <input type="url" name="video" id="video" />
                             <input class="f-left green-button" type="button" value="Додати" />
                             <input class="f-right red-button" type="button" value="Відміна" />
-                </div>
+                </div>   
                 <ul class="cont-addmedia">
                     <li class="addmedia image">
                         <label for="image"></label>
                         <input type="file" id="image" name="image" multiple />
                     </li>
                     <li class="addmedia video">
-
+                                                    
                     </li>
                     <li class="addmedia document">
                         <label for="document"></label>
                         <span class="type-doc">.pdf, .doc(x), .xls(x) </span>
                         <input type="file" name="document" id="document" multiple />
                     </li>
-                </ul>
+                </ul>                
             </fieldset>
             <fieldset class="discription">
                 <ul>
@@ -174,9 +175,9 @@
                                         <option value="meter">метр</option>
                                         <option value="kg">кг</option>
                                         <option value="ton">тонна</option>
-                                        <option value="liter">литр</option>
+                                        <option value="liter">литр</option>                                    
                                     </select>
-
+                                    
                                     <input class="f-right w-number" type="text" name="tool-number" id="tool-number" />
                                     <span class="close-input"></span>
                                 </li>
@@ -208,7 +209,7 @@
             </fieldset>
         </form>
   	</section>
-
+   
     <footer class="new-dream-shadow">
         <ul class="footer-info">
             <li>
