--- a/search.html
+++ b/search.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Index</title>
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/FAQ.css">
+	<link rel="stylesheet" href="styles/search.css">
 </head>
 
 <body>
@@ -65,7 +67,7 @@
         </ul>
         <a class="add-dream" href="#">Додати мрію</a>
     </header>
-
+	
     <section class="bg-pages search-content">
         <h1 class="search-page-title">Ви шукали: <strong>облмздрмттр</strong></h1>
         <ul class="search-groups">
@@ -125,7 +127,7 @@
             <a href="#" title="">Показати більше<br/><span></span><span></span><span></span></a>
         </div>
 	</section>
-
+   
     <footer>
         <ul class="footer-info">
             <li>
