--- a/old-browsers.html
+++ b/old-browsers.html
@@ -21,13 +21,13 @@
             </p>
             <ul class="download-brows">
                 <li>
-                    <a href="#"><img src="images/chrome.png">Chrome</a>
+                    <a href="#"><img src="images/chrome.png" alt="Chrome">Chrome</a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/firefox.png">Firefox</a>
+                    <a href="#"><img src="images/firefox.png" alt="Firefox">Firefox</a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/opera.png">Opera</a>
+                    <a href="#"><img src="images/opera.png" alt="Opera">Opera</a>
                 </li>
             </ul>
       	</section>
