--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-    <div ui-view="home"></div>
+    <ui-view></ui-view>
 </body>
 </html>
