--- a/index.html
+++ b/index.html
@@ -1,37 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="chedream.app">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
 
-    <script src="js/addDream/model.js"></script>
-    <script src="js/addDream/controller.js"></script>
-    <script src="js/contacts/model.js"></script>
-    <script src="js/contacts/controller.js"></script>
-    <script src="js/editDream/model.js"></script>
-    <script src="js/editDream/controller.js"></script>
-    <script src="js/editProfile/model.js"></script>
-    <script src="js/editProfile/controller.js"></script>
-    <script src="js/faq/model.js"></script>
-    <script src="js/faq/controller.js"></script>
     <script src="js/home/model.js"></script>
     <script src="js/home/controller.js"></script>
-    <script src="js/userProfile/model.js"></script>
-    <script src="js/userProfile/controller.js"></script>
+    <script src="js/faq/model.js"></script>
+    <script src="js/faq/controller.js"></script>
+    <script src="js/contacts/model.js"></script>
+    <script src="js/contacts/controller.js"></script>
 
-    <link rel="stylesheet" href="styles/contacts.css">
-    <link rel="stylesheet" href="styles/error-page.css">
-    <link rel="stylesheet" href="styles/FAQ.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/new-dream(empty+full)+edit-page.css">
-    <link rel="stylesheet" href="styles/search.css">
-    <link rel="stylesheet" href="styles/user-profile.css">
-    <link rel="stylesheet" href="styles/user-profile-edit.css">
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <!--<script src="js/addDream/model.js"></script>-->
+    <!--<script src="js/addDream/controller.js"></script>-->
+    <!--<script src="js/editDream/model.js"></script>-->
+    <!--<script src="js/editDream/controller.js"></script>-->
+    <!--<script src="js/editProfile/model.js"></script>-->
+    <!--<script src="js/editProfile/controller.js"></script>-->
+    <!--<script src="js/userProfile/model.js"></script>-->
+    <!--<script src="js/userProfile/controller.js"></script>-->
 </head>
 <body>
     <ui-view></ui-view>
