Adding ui-header directive

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
     <!--<script src="js/editProfile/controller.js"></script>-->
     <!--<script src="js/userProfile/model.js"></script>-->
     <!--<script src="js/userProfile/controller.js"></script>-->
+
+    <script src="js/ui-directives/headerAndFooter.js"></script>
 </head>
 <body>
+<div class="wrapper">
+    <ui-header></ui-header>
     <ui-view></ui-view>
+</div>
 </body>
 </html>
