Adding footer and header directives

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
 
+    <script src="js/ui-directives/header.js"></script>
+    <script src="js/ui-directives/footer.js"></script>
+
     <script src="js/home/model.js"></script>
     <script src="js/home/controller.js"></script>
     <script src="js/faq/model.js"></script>
@@ -27,12 +30,12 @@
     <!--<script src="js/userProfile/model.js"></script>-->
     <!--<script src="js/userProfile/controller.js"></script>-->
 
-    <script src="js/ui-directives/headerAndFooter.js"></script>
 </head>
 <body>
 <div class="wrapper">
     <ui-header></ui-header>
     <ui-view></ui-view>
+    <ui-footer></ui-footer>
 </div>
 </body>
 </html>
