--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="chedream.app">
+<html ng-app="cheDream.app">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -10,6 +10,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
+    <script src="js/api/api.js"></script>
 
     <script src="js/ui-directives/header.js"></script>
     <script src="js/ui-directives/footer.js"></script>
