--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script src="js/routing.js"></script>
     <script src="js/api/api.js"></script>
 
-    <script src="js/ui-directives/header.js"></script>
+    <script src="js/ui-directives/carousel.js"></script>
     <script src="js/ui-directives/footer.js"></script>
+    <script src="js/ui-directives/header.js"></script>
 
     <script src="js/home/model.js"></script>
     <script src="js/home/controller.js"></script>
