added spinner on home page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </ul>
         </div>
     </div>
-    <section>
+    <section class="main-content">
         <ul class="dreams-preview">
             <li>
                 <span class="favorite"></span>
@@ -481,6 +481,7 @@
                 <a class="btn-support" href="#">Підтримати</a>
             </li>
         </ul>
+        <span class="ico-spin5 animate-spin"></span>
     </section>
 <footer>
     <ul class="footer-info">
@@ -557,5 +558,6 @@
         <p>Дякуємо за вашу підтримку!</p>
     </div>
 </div>
+
 </body>
 </html>
