--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
