--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html ng-app="cheDream.app">
+<html ng-app="cheDream.app" ng-init=" title='Черкаська мрія - Головна' ">
 <head>
+    <title>{{ title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
