--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="cheDream.app" ng-init=" title='Черкаська мрія - Головна' ">
+<html ng-app="cheDream.app">
 <head>
     <title>{{ title }}</title>
     <meta charset="utf-8">
