--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>{{ title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="icon" href="images/popup-thanks.png">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/spin.js/spin.js"></script>
+    <script src="bower_components/angular-loading/angular-loading.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
