convert favicon from png to ico

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>{{ title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="icon" href="images/popup-thanks.png">
+    <link rel="icon" href="images/popup-thanks.ico">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="node_modules/angular/angular.js"></script>
