Creating dream-page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="icon" href="images/popup-thanks.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/contacts.css">
+    <link rel="stylesheet" href="styles/dream.css">
+    <link rel="stylesheet" href="styles/error-page.css">
+    <link rel="stylesheet" href="styles/FAQ.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/new-dream(empty+full)+edit-page.css">
+    <link rel="stylesheet" href="styles/search.css">
+    <link rel="stylesheet" href="styles/user-profile.css">
+    <link rel="stylesheet" href="styles/user-profile-edit.css">
+    <link rel="stylesheet" href="bower_components/angular-loading/angular-loading.css">
 
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
@@ -27,6 +36,8 @@
     <script src="js/faq/controller.js"></script>
     <script src="js/contacts/model.js"></script>
     <script src="js/contacts/controller.js"></script>
+    <script src="js/dream/model.js"></script>
+    <script src="js/dream/controller.js"></script>
 
     <!--<script src="js/addDream/model.js"></script>-->
     <!--<script src="js/addDream/controller.js"></script>-->
