editDream-page init

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <!--<script src="js/addDream/model.js"></script>-->
     <!--<script src="js/addDream/controller.js"></script>-->
-    <!--<script src="js/editDream/model.js"></script>-->
-    <!--<script src="js/editDream/controller.js"></script>-->
+    <script src="js/editDream/model.js"></script>
+    <script src="js/editDream/controller.js"></script>
     <!--<script src="js/editProfile/model.js"></script>-->
     <!--<script src="js/editProfile/controller.js"></script>-->
     <!--<script src="js/userProfile/model.js"></script>-->
