Changing names from add/edit dream to dreamAction

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <script src="js/contacts/controller.js"></script>
     <script src="js/dream/model.js"></script>
     <script src="js/dream/controller.js"></script>
-    <script src="js/editDream/model.js"></script>
-    <script src="js/editDream/controller.js"></script>
+    <script src="js/dreamAction/model.js"></script>
+    <script src="js/dreamAction/controller.js"></script>
     <script src="js/faq/model.js"></script>
     <script src="js/faq/controller.js"></script>
     <script src="js/home/model.js"></script>
