Changing config of editDream/addDream

--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
     <script src="js/contacts/controller.js"></script>
     <script src="js/dream/model.js"></script>
     <script src="js/dream/controller.js"></script>
-    <script src="js/dreamAction/model.js"></script>
-    <script src="js/dreamAction/controller.js"></script>
+    <script src="js/editDream/model.js"></script>
+    <script src="js/editDream/controller.js"></script>
+    <script src="js/addDream/model.js"></script>
+    <script src="js/addDream/controller.js"></script>
     <script src="js/faq/model.js"></script>
     <script src="js/faq/controller.js"></script>
     <script src="js/home/model.js"></script>
     <script src="js/home/controller.js"></script>
-
-    <!--<script src="js/editProfile/model.js"></script>-->
-    <!--<script src="js/editProfile/controller.js"></script>-->
-    <!--<script src="js/userProfile/model.js"></script>-->
-    <!--<script src="js/userProfile/controller.js"></script>-->
 
 </head>
 <body>
