--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="styles/user-profile.css">
     <link rel="stylesheet" href="styles/user-profile-edit.css">
     <link rel="stylesheet" href="bower_components/angular-loading/angular-loading.css">
+    <link href="bower_components/angular-carousel/dist/angular-carousel.css" rel="stylesheet" type="text/css" />
 
     <script src="node_modules/angular/angular.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
